--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -3,6 +3,7 @@
 <html>
   <head>
       <title>@title</title>
+      <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/main.css")">
   </head>
   <body>
     <section class="content">@content</section>
