--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,12 +1,19 @@
 @(title: String)(content: Html)
 <!DOCTYPE html>
-<html>
+<html data-ng-app="proximal" data-ng-controller="AppCtrl">
   <head>
-      <title>@title</title>
+      <title ng-cloak ng-bind="pageTitle">@title</title>
       <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/main.css")">
+      <meta name="viewport" content="width-device-width, user-scalable=no" /> 
   </head>
   <body>
     <section class="content">@content</section>
+
+
+
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/common.min.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/app.annotated.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/templates.js")"> </script>
   </body>
 </html>
 
