Added angular tests and multiple pages
Added the login page and added header and footer directives

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,7 +7,7 @@
       <meta name="viewport" content="width-device-width, user-scalable=no" /> 
   </head>
   <body>
-    <section class="content">@content</section>
+    @content
 
 
 
