--- a/web/less/main.less
+++ b/web/less/main.less
@@ -7,3 +7,5 @@
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
 }
+
+body { padding-top: 70px; }
