login and create account pages
Create and styled the login and create account pages.
Validation still needs some work, particularly for the verfiy password

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,8 +1,8 @@
 @(title: String)(content: Html)
 <!DOCTYPE html>
-<html data-ng-app="proximal" data-ng-controller="AppCtrl">
+<html>
   <head>
-      <title ng-cloak ng-bind="pageTitle">@title</title>
+      <title>@title</title>
       <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/main.css")">
       <meta name="viewport" content="width-device-width, user-scalable=no" /> 
   </head>
