--- a/web/less/main.less
+++ b/web/less/main.less
@@ -8,4 +8,47 @@
   display: none !important;
 }
 
-body { padding-top: 70px; }
+body { padding-top: 51px;
+      }
+
+.login-page {
+    background: url("../images/learning_lab.jpg");
+
+}
+
+.login-wrapper {
+
+    border-radius: 15px;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
+    position: absolute;
+    top: 36%;
+    left: 50%;
+    display: block;
+    margin-top: -185px;
+    margin-left: -235px;
+    padding: 25px;
+    width: 420px;
+    //height: 320px;
+    opacity: .97;
+    background: none repeat scroll 0% 0% #FFF;
+
+    legend {
+        //font-family: "Lato",Helvetica,sans-serif;
+        //font-size: 36px;
+        font-weight: 300;
+        color: #333;
+        margin-top: 5px;
+        margin-bottom: 30px;
+        padding-bottom: 25px;
+    }
+
+
+    .body {
+        //padding-bottom: 30px;
+        border-bottom: 1px solid #EEE;
+    }
+
+    .footer {
+        margin-top: 20px;
+    }
+}
