--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,5 +1,80 @@
-@main(title = "Home"){
-  <prox-header></prox-header>
-    <h1>Login </h1>
+@import java.util.Date
+@main(title = "Login | Proximal Learning"){
+
+    <style type="text/css">
+        body {
+            background: url('@routes.Assets.at("images/learning_lab.jpg")') no-repeat fixed center center / cover transparent;
+        }
+    </style>
+
+    <header>
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand"> Proximal Learning </a>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+
+    <div class="container login-page">
+        <div class="login-wrapper">
+            <form class="form login-form form-horizontal" role="form">
+                <legend>Login to Proximal Learning </legend>
+                <div class="body">
+                    <div class="form-group">
+                        <label for="inputEmail" class="col-xs-4 control-label">Email</label>
+                        <div class="col-xs-8">
+                            <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="inputPassword3" class="col-xs-4 control-label">Password</label>
+                        <div class="col-xs-8">
+                            <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-xs-offset-4 col-xs-8">
+                            <button type="submit" class="btn btn-default">Sign in</button>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="footer">
+
+                    <div class="col-xs-12">
+                       <span> Don't have an account? </span>
+                    </div>
+
+                    <div class="col-xs-12 ">
+                        <a href="@routes.AccountController.create"> Create an account now </a>
+                    </div>
+
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <footer>
+        <style>
+            body { padding-bottom: 70px; }
+        </style>
+        <nav class="navbar navbar-default navbar-fixed-bottom"
+             role="navigation" style="background-color:#fff;">
+            <div class="container-fluid">
+                <div class="navbar-header">
+            <span class="navbar-brand">
+              <span class="small copyright"> © Poximal Learning LLC @{new Date().format("yyyy")} </span>
+            </span>
+                </div>
+            </div>
+        </nav>
+    </footer>
+
 
 }
