--- a/web/less/main.less
+++ b/web/less/main.less
@@ -8,8 +8,15 @@
   display: none !important;
 }
 
-body { padding-top: 51px;
-      }
+body {
+  padding-top: 51px;
+  padding-bottom: 70px;
+}
+
+
+footer .navbar {
+  background:transparent; color: white; 
+}
 
 .login-page {
     background: url("../images/learning_lab.jpg");
@@ -46,6 +53,7 @@ body { padding-top: 51px;
     .body {
         //padding-bottom: 30px;
         border-bottom: 1px solid #EEE;
+          
     }
 
     .footer {
