Adding secure social

--- a/app/views/create_account.scala.html
+++ b/app/views/create_account.scala.html
@@ -6,7 +6,7 @@
 
 @implicitFieldConstructor = @{ FieldConstructor(helpers.horizontalForm.f) }
 
-@main(title = "Login | Proximal Learning"){
+@main(title = "Create an Account | Proximal Learning"){
 
     <style type="text/css">
         body {
