--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,4 +1,11 @@
+@(loginForm: Form[LoginData])
+
 @import java.util.Date
+
+@import helper._
+
+@implicitFieldConstructor = @{ FieldConstructor(helpers.horizontalForm.f)  }
+
 @main(title = "Login | Proximal Learning"){
 
     <style type="text/css">
@@ -19,24 +26,27 @@
 
 
     <div class="container login-page">
-        <div class="login-wrapper">
-            <form class="form login-form form-horizontal" role="form">
+        <div class="login-wrapper"> 
+            @helper.form(action = routes.AccountController.loginPost(), args = 'class -> "login-form form form-horizontal") {
                 <legend>Login to Proximal Learning </legend>
-                <div class="body">
-                    <div class="form-group">
+                <div class="body"> 
+                    @helper.inputText(loginForm("email"), 'class->"form-control", 'placeholder->"Email", '_label->"Email")
+                    <!-- <div class="form-group">
                         <label for="inputEmail" class="col-xs-4 control-label">Email</label>
                         <div class="col-xs-8">
                             <input type="email" class="form-control" id="inputEmail" placeholder="Email">
                         </div>
                     </div>
-
+                    -->
+                    @helper.inputPassword(loginForm("password"), 'class->"form-control", 'placeholder->"Password",'_label->"Password") 
+                    <!--
                     <div class="form-group">
                         <label for="inputPassword3" class="col-xs-4 control-label">Password</label>
                         <div class="col-xs-8">
                             <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
                         </div>
                     </div>
-
+                    -->
                     <div class="form-group">
                         <div class="col-xs-offset-4 col-xs-8">
                             <button type="submit" class="btn btn-default">Sign in</button>
@@ -56,7 +66,7 @@
                     </div>
 
                 </div>
-            </form>
+            }
         </div>
     </div>
 
