--- a/app/views/registration/startSignup.scala.html
+++ b/app/views/registration/startSignup.scala.html
@@ -9,6 +9,8 @@
   <style type="text/css">
     body {
       background: url('@routes.Assets.at("images/learning_lab.jpg")') no-repeat fixed center center / cover transparent;
+      padding-top: 51px;
+      padding-bottom: 70px;
     }
   </style>
   <header>
