--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -14,6 +14,8 @@
   <style type="text/css">
     body {
       background: url('@routes.Assets.at("images/learning_lab.jpg")') no-repeat fixed center center / cover transparent;
+      padding-top: 51px;
+      padding-bottom: 70px;
     }
   </style>
   <header>
