--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,14 +4,12 @@
   <head>
       <title>@title</title>
       <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/main.css")">
-      <meta name="viewport" content="width-device-width, user-scalable=no" /> 
+      <meta name="viewport" content="width-device-width" /> 
   </head>
   <body>
     @content
 
-
-
-    <script type="text/javascript" src="@routes.Assets.at("javascripts/common.min.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/common.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/app.annotated.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/templates.js")"> </script>
   </body>
