--- a/web/less/main.less
+++ b/web/less/main.less
@@ -1,6 +1,14 @@
 @import "bootstrap.less";
 @import "font-awesome.less";
 
+@import "content.less";
+@import "hamburg.less";
+@import "header.less";
+@import "variables.less";
+@import "mixins.less";
+@import "sidebar.less";
+@import "widget.less";
+
 // Fix FontAwesome font path
 @fa-font-path: "../fonts";
 
@@ -8,10 +16,63 @@
   display: none !important;
 }
 
-body {
-  padding-top: 51px;
-  padding-bottom: 70px;
+/* Base */
+html {
+overflow-y: scroll;
 }
+body {
+background: #f3f3f3;
+font-family: "Montserrat";
+color: #333333 !important;
+}
+.row {
+margin-left: 0 !important;
+margin-right: 0 !important;
+}
+.row > div {
+margin-bottom: 15px;
+}
+.alerts-container .alert:last-child {
+margin-bottom: 0;
+}
+#page-wrapper {
+padding-left: 70px;
+height: 100%
+}
+#sidebar-wrapper {
+margin-left: -150px;
+left: -30px;
+width: 250px;
+position: fixed;
+height: 100%;
+z-index: 999;
+}
+#page-wrapper, #sidebar-wrapper {
+transition: all .4s ease 0s;
+}
+.green {
+background: #23ae89 !important;
+}
+.blue {
+background: #2361ae !important;
+}
+.orange {
+background: #d3a938 !important;
+}
+.red {
+background: #ae2323 !important;
+}
+.form-group .help-block.form-group-inline-message {
+padding-top: 5px;
+}
+div.input-mask {
+padding-top: 7px;
+}
+
+
+
+
+
 
 
 footer .navbar {
