--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -2,9 +2,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>@title</title>
-      <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/main.css")">
-      <meta name="viewport" content="width-device-width" /> 
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>@title</title>
+    <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/main.css")">
   </head>
   <body>
     @content
