Removed grunt in favor of the sbt asset pipeline
All files under /web have been removed and added instead to /app/assets

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,5 +1,5 @@
-@import "bootstrap.less";
-@import "font-awesome.less";
+@import "lib/bootstrap/less/bootstrap.less";
+@import "lib/font-awesome/less/font-awesome.less";
 
 @import "content.less";
 @import "hamburg.less";
@@ -10,7 +10,7 @@
 @import "widget.less";
 
 // Fix FontAwesome font path
-@fa-font-path: "../fonts";
+@fa-font-path: "../lib/font-awesome/fonts/";
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
