--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,9 +11,25 @@
   <body>
     @content
 
-    <script type="text/javascript" src="@routes.Assets.at("javascripts/common.js")"> </script>
-    <script type="text/javascript" src="@routes.Assets.at("javascripts/app.annotated.js")"> </script>
-    <script type="text/javascript" src="@routes.Assets.at("javascripts/templates.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("lib/jquery/jquery.min.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-animate.min.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-cookies.min.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-sanitize.min.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-touch.min.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-router/angular-ui-router.min.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("lib/bootstrap/js/bootstrap.min.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-bootstrap/ui-bootstrap-tpls.min.js")"> </script>
+ 
+    <script type="text/javascript" src="@routes.Assets.at("lib/lodash/lodash.min.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/app.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/routes.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/admin/admin_controller.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/children/children_controller.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/dashboard/dashboard_controller.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/home/home_controller.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/library/library_controller.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/settings/settings_controller.js")"> </script>
   </body>
 </html>
 
