personService - child directive
added a person service for the frontend and backend and created a
directive to show children

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -24,6 +24,11 @@
     <script type="text/javascript" src="@routes.Assets.at("lib/lodash/lodash.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/app.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/routes.js")"> </script>
+    
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/services/person_service.js")"> </script>
+    
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/children/children_directive.js")"> </script>
+
     <script type="text/javascript" src="@routes.Assets.at("javascripts/admin/admin_controller.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/children/children_controller.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/dashboard/dashboard_controller.js")"> </script>
