Children are persisting to the database
Parents are now able to add children from the web interface

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -9,6 +9,8 @@
 @import "sidebar.less";
 @import "widget.less";
 
+@icon-font-path: "../lib/bootstrap/fonts/";
+
 // Fix FontAwesome font path
 @fa-font-path: "../lib/font-awesome/fonts/";
 
