--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     @content
-
+    <input type="hidden" name="rootUrl" value="@controllers.routes.ApplicationController.index()" id="rootUrl"/>
     <script type="text/javascript" src="@routes.Assets.at("lib/jquery/jquery.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-animate.min.js")"> </script>
