Added to delete functionality and view
Parents can now delete their child and view more info. The more info
pane currently doesn't have any info yet.

--- a/app/assets/javascripts/children/templates/children.html
+++ b/app/assets/javascripts/children/templates/children.html
@@ -2,4 +2,5 @@
   <div class="col-lg-4"> 
     <prox-children children='children'> </prox-children>
   </div>
+  <div ui-view class="view-child"> </div>
 </div>
