--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -8,6 +8,7 @@
 @import "mixins.less";
 @import "sidebar.less";
 @import "widget.less";
+@import "animations.less";
 
 @icon-font-path: "../lib/bootstrap/fonts/";
 
