--- a/app/assets/javascripts/children/templates/view_child.html
+++ b/app/assets/javascripts/children/templates/view_child.html
@@ -1,1 +1,7 @@
-<h1> hello! </h1>
+<prox-widget>
+<prox-widget-header data-title="{{child.firstName + ' ' + child.lastName}}" > </prox-widget-header>
+  <prox-widget-body loading="true"> 
+  
+  
+  </prox-widget-body>
+</prox-widget>
