--- a/app/assets/javascripts/children/templates/children.html
+++ b/app/assets/javascripts/children/templates/children.html
@@ -2,5 +2,5 @@
   <div class="col-lg-4"> 
     <prox-children children='children'> </prox-children>
   </div>
-  <div ui-view class="view-child"> </div>
+  <div ui-view class="view-child col-lg-8"> </div>
 </div>
