--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -20,14 +20,20 @@
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-touch.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-router/angular-ui-router.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/bootstrap/js/bootstrap.min.js")"> </script>
-    <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-bootstrap/ui-bootstrap-tpls.min.js")"> </script>
- 
+    <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-bootstrap/ui-bootstrap-tpls.min.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("lib/lodash/lodash.min.js")"> </script>
+
     <script type="text/javascript" src="@routes.Assets.at("javascripts/app.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/routes.js")"> </script>
+  
+    <!-- Shared directives -->
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/shared/widget/loading_directive.js")"> </script> 
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/shared/widget/widget_directive.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/shared/widget/widgetBody_directive.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/shared/widget/widgetHeader_directive.js")"> </script>
     
-    <script type="text/javascript" src="@routes.Assets.at("javascripts/services/person_service.js")"> </script>
-    
+    <!-- Factories -->
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/services/person_service.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/children/children_directive.js")"> </script>
 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/admin/admin_controller.js")"> </script>
