--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -34,9 +34,12 @@
     
     <!-- Factories -->
     <script type="text/javascript" src="@routes.Assets.at("javascripts/services/person_service.js")"> </script> 
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/services/standards_service.js")"> </script> 
+
     <script type="text/javascript" src="@routes.Assets.at("javascripts/children/children_directive.js")"> </script>
 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/admin/admin_controller.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/admin/standards/standards_controller.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/children/children_controller.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/dashboard/dashboard_controller.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/home/home_controller.js")"> </script>
