--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,6 +8,8 @@
     <title>@title</title>
     <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/animate.css")">
     <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/main.css")">
+    <link rel="stylesheet" type="text/css" href="@routes.Assets.at("lib/select2/select2.css")">
+    <link rel="stylesheet" type="text/css" href="@routes.Assets.at("lib/select2/select2-bootstrap.css")">
   </head>
   <body>
     @content
@@ -18,10 +20,13 @@
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-cookies.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-sanitize.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-touch.min.js")"> </script>
-    <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-router/angular-ui-router.min.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-router/angular-ui-router.min.js")"> </script> 
+    <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui/angular-ui.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/bootstrap/js/bootstrap.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-bootstrap/ui-bootstrap-tpls.min.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("lib/lodash/lodash.min.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("lib/select2/select2.min.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-select/select.min.js")"> </script>
 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/app.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/routes.js")"> </script>
@@ -35,6 +40,7 @@
     <!-- Factories -->
     <script type="text/javascript" src="@routes.Assets.at("javascripts/services/person_service.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/services/standards_service.js")"> </script> 
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/services/common_service.js")"> </script> 
 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/children/children_directive.js")"> </script>
 
