Modifications to statement controller and styles
Changed the statement controller to automatially fill in the subject
from the standard.

Fixed some styles

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -9,6 +9,7 @@
 @import "sidebar.less";
 @import "widget.less";
 @import "animations.less";
+@import "buttons.less";
 
 @icon-font-path: "../lib/bootstrap/fonts/";
 
