More styling for admin panel

--- a/app/assets/stylesheets/content.less
+++ b/app/assets/stylesheets/content.less
@@ -17,3 +17,19 @@
 #page-wrapper.active #sidebar-wrapper {
   left: 150px;
 }
+
+.sub-container {
+ 
+  -webkit-box-shadow: -3px 1px 6px 0px rgba(0,0,0,1);
+  -moz-box-shadow: -3px 1px 6px 0px rgba(0,0,0,1);
+  box-shadow: -3px 1px 6px 0px rgba(0,0,0,1);
+
+  .toolbar {
+    
+  }
+
+  .info {
+
+  }
+
+}
