--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,9 +10,11 @@
     <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/main.css")">
     <link rel="stylesheet" type="text/css" href="@routes.Assets.at("lib/select2/select2.css")">
     <link rel="stylesheet" type="text/css" href="@routes.Assets.at("lib/select2/select2-bootstrap.css")">
+    <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/toaster.css")">
   </head>
   <body>
-    @content
+    @content 
+    <toaster-container></toaster-container>
     <input type="hidden" name="rootUrl" value="@controllers.routes.ApplicationController.index()" id="rootUrl"/>
     <script type="text/javascript" src="@routes.Assets.at("lib/jquery/jquery.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular.js")"> </script>
@@ -20,6 +22,7 @@
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-cookies.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-sanitize.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-touch.min.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/angular-toaster.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-router/angular-ui-router.min.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui/angular-ui.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/bootstrap/js/bootstrap.min.js")"> </script>
