More style fixes

--- a/app/assets/javascripts/children/templates/view_child.html
+++ b/app/assets/javascripts/children/templates/view_child.html
@@ -1,7 +1,31 @@
-<prox-widget>
-<prox-widget-header data-title="{{child.firstName + ' ' + child.lastName}}" > </prox-widget-header>
-  <prox-widget-body loading="true"> 
+<div class="sub-container-wrapper">
+<div class="sub-container">
   
-  
-  </prox-widget-body>
-</prox-widget>
+  <div class="row col-md-12 breadcrumbs">
+    
+  </div>
+
+  <div class="row col-md-12 toolbar">
+    
+    <div class="col-md-4"> 
+      <h4> {{child.firstName + ' ' + child.lastName}} </h4>
+    </div>
+    
+    <div class="col-md-4">
+
+    </div>
+
+    <div class="col-md-4">
+      <h4> Kindergarten </h4>
+    </div>
+
+  </div>
+
+  <div >
+    <br />
+    <br />
+  </div>
+
+
+</div>
+</div>
