--- a/app/assets/stylesheets/content.less
+++ b/app/assets/stylesheets/content.less
@@ -19,10 +19,14 @@
 }
 
 .sub-container {
- 
-  -webkit-box-shadow: -3px 1px 6px 0px rgba(0,0,0,1);
-  -moz-box-shadow: -3px 1px 6px 0px rgba(0,0,0,1);
-  box-shadow: -3px 1px 6px 0px rgba(0,0,0,1);
+  position:relative;
+  top: -12px;
+  width: 101%;
+
+  height: 100vh;
+  -webkit-box-shadow: -3px 1px 6px 0px rgba(137, 137, 137, 0.6);
+  -moz-box-shadow: -3px 1px 6px 0px rgba(137, 137, 137, 0.6);
+  box-shadow: -3px 1px 6px 0px rgba(137, 137, 137, 0.6);
 
   .toolbar {
     
