--- a/app/assets/javascripts/children/templates/view_child.html
+++ b/app/assets/javascripts/children/templates/view_child.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="col-md-4">
-      <h4> Kindergarten </h4>
+      <h4> {{child.educationLevel.description}} </h4>
     </div>
 
   </div>
