some ui improvements
added a way to create breadcrumbs

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -108,9 +108,12 @@
             <div class="page">
               {{ state.current.data.title }} 
             </div>
-            <!-- <div class="breadcrumb-links">
-              
-              </div> -->
+            <div class="breadcrumb-links" ng-if="state.current.data.breadcrumbs != null">
+              <a ui-sref={{breadcrumb.path}} ng-repeat="breadcrumb in state.current.data.breadcrumbs" >
+                {{breadcrumb.text}} /
+              </a>
+              {{state.current.data.title}}
+            </div>
           </div>
         </div>
       </div>
