--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -75,11 +75,6 @@ padding-top: 7px;
 }
 
 
-
-
-
-
-
 footer .navbar {
   background:transparent; color: white; 
 }
@@ -125,4 +120,9 @@ footer .navbar {
     .footer {
         margin-top: 20px;
     }
+}
+
+.question-table {
+  width: 100%;
+  height: 85vh;
 }
