--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-animate.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-cookies.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-sanitize.min.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-resource.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-touch.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/angular-toaster.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-router/angular-ui-router.min.js")"> </script> 
@@ -55,6 +56,7 @@
     <script type="text/javascript" src="@routes.Assets.at("javascripts/admin/standards/standards_controller.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/admin/standards/statements/statements_controller.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/admin/questions/questions_controller.js")"> </script> 
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/admin/questions/questions_directive.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/children/children_controller.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/dashboard/dashboard_controller.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/home/home_controller.js")"> </script>
