Improved questions ui flow

--- a/app/assets/stylesheets/header.less
+++ b/app/assets/stylesheets/header.less
@@ -5,7 +5,7 @@
 height: 60px;
 background: #fff;
 margin-bottom: 15px;
-box-shadow: 0px -10px 17px 8px rgba(0, 0, 0, 0.5);
+/*box-shadow: 0px -10px 17px 8px rgba(0, 0, 0, 0.5);*/
 & > div:last-child {
 padding-right: 0;
 }
