--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -119,7 +119,7 @@
       </div>
       <!-- End Header Bar -->
       <!-- Main Content -->
-      <section data-ui-view></section>  
+      <section class="content-page" style="top:61px" ng-class="{'sidebar-open': toggle, 'sidebar-closed': !toggle}" data-ui-view></section>  
     
     </div><!-- End Page Content -->
   </div><!-- End Content Wrapper -->
