--- a/app/assets/stylesheets/variables.less
+++ b/app/assets/stylesheets/variables.less
@@ -1,6 +1,9 @@
 /* #592727 RED */
 /* #2f5927 GREEN */
 /* #30426a BLUE (default)*/
+/* Main background color */
+@mainBackgroundColor: #F3F3F3;
+
 /* Sidebar background color */
 @sidebarBaseColor: #30426a;
 /* Sidebar header and footer color */
