ADded directive to handle subpages

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -10,7 +10,7 @@
 @import "widget.less";
 @import "animations.less";
 @import "buttons.less";
-
+@import "simple-sidebar.less";
 @icon-font-path: "../lib/bootstrap/fonts/";
 
 // Fix FontAwesome font path
