--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -109,7 +109,7 @@
               {{ state.current.data.title }} 
             </div>
             <div class="breadcrumb-links" ng-if="state.current.data.breadcrumbs != null">
-              <a ui-sref={{breadcrumb.path}} ng-repeat="breadcrumb in state.current.data.breadcrumbs" >
+              <a ui-sref={{breadcrumb.path}} close-inner-page="{{breadcrumb.close-inner-page}}" ng-repeat="breadcrumb in state.current.data.breadcrumbs" >
                 {{breadcrumb.text}} /
               </a> 
               {{state.current.data.title}}
@@ -119,7 +119,7 @@
       </div>
       <!-- End Header Bar -->
       <!-- Main Content -->
-      <section class="content-page" style="top:61px" ng-class="{'sidebar-open': toggle, 'sidebar-closed': !toggle}" data-ui-view></section>  
+      <section style="top:61px" data-ui-view></section>  
     
     </div><!-- End Page Content -->
   </div><!-- End Content Wrapper -->
