--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -44,6 +44,7 @@
     <script type="text/javascript" src="@routes.Assets.at("javascripts/shared/widget/widgetHeader_directive.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/shared/icons/question_directive.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/shared/listGroup/listgroup_directive.js")"> </script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/shared/innerPage/innerpage_directive.js")"> </script>
 
     <!-- Factories -->
     <script type="text/javascript" src="@routes.Assets.at("javascripts/services/person_service.js")"> </script> 
